fix some layout issues

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -11,7 +11,7 @@
 */
 
 body {
-	background-color: #e9e9e9;
+	background-color: #f3f3f3;
 }
 
 h2.section-header {
@@ -20,6 +20,10 @@ h2.section-header {
 	margin-bottom: 1em;
 	color: #555555;
 	text-shadow: 0px -1px 1px rgba(0,0,0,0.6),0px 1px 1px #fff;
+}
+
+.col-md-12.full-width-column {
+  padding: 0;
 }
 
 .post-header  h2 {
@@ -96,6 +100,18 @@ div#post #body #paragraph-text {
 
 div#post #body #paragraph-text ol li {
   margin-bottom: 12px;
+}
+
+div#post #body #paragraph-text p {
+  margin-bottom: 40px;
+}
+
+div#post #body #paragraph-text blockquote {
+  border-color: #ccc;
+}
+
+div#post #body #paragraph-text blockquote p {
+  margin-bottom: 0;
 }
 
 div#body img {
@@ -261,7 +277,11 @@ pre code {
     font-size: 3em;
     color: white;
     padding: .35em .5em;
-
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-tranform: translateY(-50);
 }
 
 .blog-leaf span.glyphicon.glyphicon-book {
