--- a/stylesheets/tutorial.css
+++ b/stylesheets/tutorial.css
@@ -32,6 +32,7 @@
 }
 
 div.example-block {
+  left: 0;
 	width: 100%;
 	text-align: center;
 }
